@@ -84,7 +84,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     private final AtomicBoolean batchingAllowed = new AtomicBoolean(false);
     private volatile long sendTimeout = -1;
     private WsSession wsSession;
-    private List<EncoderEntry> encoderEntries = new ArrayList<>();
+    private final List<EncoderEntry> encoderEntries = new ArrayList<>();
 
 
     protected void setTransformation(Transformation transformation) {
@@ -293,7 +293,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         // Some extensions/transformations may buffer messages so it is possible
         // that no message parts will be returned. If this is the case simply
         // return.
-        if (messageParts.size() == 0) {
+        if (messageParts.isEmpty()) {
             return;
         }
 
@@ -377,12 +377,12 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         // Some extensions/transformations may buffer messages so it is possible
         // that no message parts will be returned. If this is the case the
         // trigger the supplied SendHandler
-        if (messageParts.size() == 0) {
+        if (messageParts.isEmpty()) {
             handler.onResult(new SendResult(getSession()));
             return;
         }
 
-        MessagePart mp = messageParts.remove(0);
+        MessagePart mp = messageParts.removeFirst();
 
         boolean doWrite = false;
         synchronized (messagePartLock) {
@@ -419,7 +419,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     void endMessage(SendHandler handler, SendResult result) {
         boolean doWrite = false;
-        MessagePart mpNext = null;
+        MessagePart mpNext;
         synchronized (messagePartLock) {
 
             fragmented = nextFragmented;
@@ -770,10 +770,10 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
         if (fin) {
             // Set the fin bit
-            b -= 128;
+            b -= (byte) 128;
         }
 
-        b += (rsv << 4);
+        b += (byte) (rsv << 4);
 
         if (first) {
             // This is the first fragment of this message
